Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -972,7 +972,7 @@ void RenderLayerBacking::setBackgroundLayerPaintsFixedRootBackground(bool backgr
 bool RenderLayerBacking::requiresHorizontalScrollbarLayer() const
 {
 #if !PLATFORM(CHROMIUM)
-    if (!m_owningLayer->hasOverlayScrollbars())
+    if (!m_owningLayer->hasOverlayScrollbars() && !m_owningLayer->needsCompositedScrolling())
         return false;
 #endif
     return m_owningLayer->horizontalScrollbar();
@@ -981,7 +981,7 @@ bool RenderLayerBacking::requiresHorizontalScrollbarLayer() const
 bool RenderLayerBacking::requiresVerticalScrollbarLayer() const
 {
 #if !PLATFORM(CHROMIUM)
-    if (!m_owningLayer->hasOverlayScrollbars())
+    if (!m_owningLayer->hasOverlayScrollbars() && !m_owningLayer->needsCompositedScrolling())
         return false;
 #endif
     return m_owningLayer->verticalScrollbar();
@@ -990,7 +990,7 @@ bool RenderLayerBacking::requiresVerticalScrollbarLayer() const
 bool RenderLayerBacking::requiresScrollCornerLayer() const
 {
 #if !PLATFORM(CHROMIUM)
-    if (!m_owningLayer->hasOverlayScrollbars())
+    if (!m_owningLayer->hasOverlayScrollbars() && !m_owningLayer->needsCompositedScrolling())
         return false;
 #endif
     return !m_owningLayer->scrollCornerAndResizerRect().isEmpty();
